--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,3 +28,7 @@ dependencies {
     implementation 'com.android.support:support-annotations:28.0.0'
     implementation project(path: ':nicepointerview')
 }
+
+tasks.withType(JavaCompile) {
+    options.encoding = "UTF-8"
+}
