--- a/nicepointerview/build.gradle
+++ b/nicepointerview/build.gradle
@@ -9,7 +9,7 @@ def gitUrl = 'https://github.com/shiqizhenyes/NicePointerView.git'
 android {
     compileSdkVersion 28
     defaultConfig {
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -34,6 +34,10 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:support-annotations:28.0.0'
     implementation 'com.android.support:support-compat:28.0.0'
+//    implementation 'me.kareluo.ui:popmenu:1.1.0'
+    implementation ('com.github.zengzhaoxing:SharpView:v2.4.4') {
+            exclude group: 'com.android.support'
+    }
 }
 
 tasks.withType(JavaCompile) {
